--- a/bin-debug/src/manifest.json
+++ b/bin-debug/src/manifest.json
@@ -1,7 +1,8 @@
 [
 	"GameUtils/BassPanel.ts",
-	"GameUtils/GetResByany.ts",
+	"GameUtils/GetImageByUrl.ts",
 	"GameUtils/utils.ts",
+	"showlogo.ts",
 	"GameUtils/Menu.ts",
 	"Loading.ts",
 	"LoadingUI.ts",
